--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "msurguy/honeypot": "^1.3",
         "tcg/voyager": "^1.7"
     },
     "require-dev": {
