--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "msurguy/honeypot": "^1.3",
+        "spatie/crawler": "^7.1",
         "tcg/voyager": "^1.7"
     },
     "require-dev": {
