--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.7",
         "msurguy/honeypot": "^1.3",
         "spatie/crawler": "^7.1",
+        "spatie/laravel-sitemap": "^6.4",
         "tcg/voyager": "^1.7"
     },
     "require-dev": {
